Resolves content overlapping issue

--- a/src/app/_layout.scss
+++ b/src/app/_layout.scss
@@ -13,6 +13,7 @@ body {
   header {
     position: sticky;
     top: 0;
+    z-index: 1;
   }
   hr {
     max-width: $maxContentWidth;
